--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,16 @@ python37-30:
     reports:
       junit: .reports/django-tests.xml
 
+python37-31:
+  image: registry.gitlab.com/potato-oss/google-cloud/django-gcloud-connectors/python37:latest
+  stage: test
+  before_script:
+    - mkdir .reports
+  script: tox -e py37-31
+  artifacts:
+    reports:
+      junit: .reports/django-tests.xml
+
 python37-djangae:
   image: registry.gitlab.com/potato-oss/google-cloud/django-gcloud-connectors/python37:latest
   stage: test
@@ -31,12 +41,11 @@ python37-djangae:
     - git clone https://github.com/potatolondon/djangae.git
   script:
     - cd djangae
-    # Hack. We want to setup the tox env, so we pass a none existent test to the Django test runner
-    # which will fail, then we update the deps, and then run it for real
-    - tox -e py37 -- none || true
-    - source .tox/py37/bin/activate # Active the venv and install this version of cloud connectors
+    # Hack. We want to setup the tox env, so we just print the help
+    - tox -e py37-22 -- --help
+    - source .tox/py37-22/bin/activate # Active the venv and install this version of cloud connectors
     - pip install git+https://gitlab.com/potato-oss/google-cloud/django-gcloud-connectors.git@$CI_COMMIT_SHA
-    - tox -e py37  # Run the Djangae tests properly
+    - tox -e py37-22  # Run the Djangae tests properly
   artifacts:
     reports:
       junit: .reports/djangae-tests.xml
