--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py37-{22,30},
-    py38-{22,30},
+    py37-{22,30,31},
+    py38-{22,30,31},
     flake8
 
 [testenv]
@@ -10,6 +10,7 @@ deps =
     unittest-xml-reporting
     22: django >= 2.2, < 3.0
     30: django >= 3.0, < 3.1
+    31: django >= 3.1, < 3.2
 commands =
     pip install --upgrade pip
     pip install -e .
