--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py37-{22,30,31},
-    py38-{22,30,31},
+    py37-{22,30,31,32},
+    py38-{22,30,31,32},
     flake8
 
 [testenv]
@@ -11,6 +11,7 @@ deps =
     22: django >= 2.2, < 3.0
     30: django >= 3.0, < 3.1
     31: django >= 3.1, < 3.2
+    32: django == 3.2rc1
 commands =
     pip install --upgrade pip
     pip install -e .
