--- a/tox.ini
+++ b/tox.ini
@@ -8,10 +8,10 @@ envlist =
 deps =
     ipdb
     unittest-xml-reporting
-    22: django >= 2.2, < 3.0
-    30: django >= 3.0, < 3.1
-    31: django >= 3.1, < 3.2
-    32: django == 3.2rc1
+    22: django ~= 2.2
+    30: django == 3.0.13
+    31: django == 3.1.7
+    32: django ~= 3.2rc1
 commands =
     pip install --upgrade pip
     pip install -e .
